--- a/src/Graphics/samples/GraphicsTester.Skia.Windows/GraphicsTester.Skia.Windows.csproj
+++ b/src/Graphics/samples/GraphicsTester.Skia.Windows/GraphicsTester.Skia.Windows.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.19041.44" TargetingPackVersion="10.0.19041.44" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Graphics.Skia.WPF\Graphics.Skia.WPF.csproj" />
     <ProjectReference Include="..\GraphicsTester.Portable\GraphicsTester.Portable.csproj" />
   </ItemGroup>
