--- a/eng/pipelines/common/maui-templates.yml
+++ b/eng/pipelines/common/maui-templates.yml
@@ -107,9 +107,15 @@ jobs:
       displayName: Run $(PLATFORM_NAME) templates build tests
       workingDirectory: ${{ parameters.checkoutDirectory }}
 
-    - publish: ${{ parameters.checkoutDirectory }}/**/*.binlog
-      condition: always()
-      artifact: template-build-tests
+    - task: CopyFiles@2
+      displayName: Copy binlogs
+      inputs:
+        SourceFolder: '$(Build.SourcesDirectory)'
+        Contents: |
+          **/*.binlog
+        TargetFolder: '$(Build.StagingDirectory)/IntegrationTestsBuildLogs'
+      continueOnError: true
+      condition: succeededOrFailed()
 
     - task: PublishTestResults@2
       displayName: Publish the $(PLATFORM_NAME) templates build tests
