--- a/eng/pipelines/maui-release.yml
+++ b/eng/pipelines/maui-release.yml
@@ -168,6 +168,8 @@ extends:
                         provisionatorChannel: ${{ parameters.provisionatorChannel }}
                         gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
                         skipAndroidImages: true
+                        skipAndroidSdks: true
+                        installDefaultAndroidApi: true
 
       - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:                           # Sign only using the private server   
         - template: /eng/pipelines/common/sign.yml@self                                 
