--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -5,6 +5,7 @@ parameters:
   skipProvisioning: $(skipProvisionator)
   skipAndroidSdks: false
   skipAndroidImages: false
+  installDefaultAndroidApi: false
   checkoutDirectory: $(System.DefaultWorkingDirectory)
   provisionatorPath: $(provisionator.path)
   provisionatorXCodePath: $(provisionator.xcode)
@@ -12,6 +13,10 @@ parameters:
   provisionatorExtraArguments: $(provisionator.extraArguments)
   gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
   certPass: $(pass--components-mac-ios-certificate-p12)
+  federatedServiceConnection: 'dotnetbuilds-internal-read'
+  outputVariableName: 'dotnetbuilds-internal-container-read-token'
+  expiryInHours: 1
+  base64Encode: false
 
 steps:
   # Prepare macOS
@@ -54,6 +59,8 @@ steps:
           SKIP_ANDROID_API_SDKS: 'true'
         ${{ if eq(parameters.skipAndroidImages, true) }}:
           SKIP_ANDROID_API_IMAGES: 'true'
+        ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
+          INSTALL_DEFAULT_ANDROID_API: 'true'
 
   # Setup JDK Paths (gradle needs it)
   - bash: |
@@ -89,6 +96,8 @@ steps:
           SKIP_ANDROID_API_SDKS: 'true'
         ${{ if eq(parameters.skipAndroidImages, true) }}:
           SKIP_ANDROID_API_IMAGES: 'true'
+        ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
+          INSTALL_DEFAULT_ANDROID_API: 'true'
 
   - pwsh: |
       if ($env:JAVA_HOME_17_X64) {
@@ -143,11 +152,11 @@ steps:
       displayName: 'Clear all NuGet caches'
 
   - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
-    - task: PowerShell@2
-      condition: eq(variables['PrivateBuild'], 'true')
-      displayName: Setup Private Feeds Credentials
-      inputs:
-        filePath: $(System.DefaultWorkingDirectory)/eng/common/SetupNugetSources.ps1
-        arguments: -ConfigFile $(System.DefaultWorkingDirectory)/NuGet.config -Password $Env:Token
-      env:
-        Token: $(dn-bot-dnceng-artifact-feeds-rw) 
+    - template: ../../common/templates-official/steps/enable-internal-sources.yml
+
+    - template: ../../common/templates-official/steps/enable-internal-runtimes.yml
+      parameters:
+        federatedServiceConnection: ${{ parameters.federatedServiceConnection }}
+        outputVariableName: ${{ parameters.outputVariableName }}
+        expiryInHours: ${{ parameters.expiryInHours }}
+        base64Encode: ${{ parameters.base64Encode }}
