--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -80,12 +80,12 @@
   </ItemGroup>
 
   <!-- Until we get net9 rtm -->
-  <ItemGroup Condition=" '$(_MauiTargetPlatformIsWindows)' == 'True' AND '$(IncludeWindowsSDKRefFrameworkReferences)' == 'True'">
+  <!-- <ItemGroup Condition=" '$(_MauiTargetPlatformIsWindows)' == 'True' AND '$(IncludeWindowsSDKRefFrameworkReferences)' == 'True'">
     <FrameworkReference Include="Microsoft.Windows.SDK.NET.Ref" IsImplicitlyDefined="true" Pack="false" PrivateAssets="All" />
   </ItemGroup>
   <PropertyGroup>
     <WindowsSdkPackageVersion>10.0.19041.34</WindowsSdkPackageVersion>   
-  </PropertyGroup>
+  </PropertyGroup> -->
 
   <!--
     Workaround for https://github.com/microsoft/WindowsAppSDK/issues/2684
