--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -84,8 +84,11 @@
     <FrameworkReference Include="Microsoft.Windows.SDK.NET.Ref" IsImplicitlyDefined="true" Pack="false" PrivateAssets="All" />
   </ItemGroup>
   <PropertyGroup>
-    <WindowsSdkPackageVersion>10.0.19041.34</WindowsSdkPackageVersion>   
+    <WindowsSdkPackageVersion>10.0.19041.34</WindowsSdkPackageVersion>
   </PropertyGroup> -->
+  <ItemGroup Condition="'$(_MauiTargetPlatformIsWindows)' == 'True'">
+    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.19041.44" TargetingPackVersion="10.0.19041.44" />
+  </ItemGroup>
 
   <!--
     Workaround for https://github.com/microsoft/WindowsAppSDK/issues/2684
