--- a/src/Graphics/samples/GraphicsTester.WinUI.Desktop/GraphicsTester.WinUI.Desktop.csproj
+++ b/src/Graphics/samples/GraphicsTester.WinUI.Desktop/GraphicsTester.WinUI.Desktop.csproj
@@ -14,6 +14,13 @@
     <IsPackable>false</IsPackable>
     <UseRidGraph>true</UseRidGraph>
   </PropertyGroup>
+
+  <ItemGroup Condition=" '$(IncludeWindowsSDKRefFrameworkReferences)' == 'True'">
+    <FrameworkReference Include="Microsoft.Windows.SDK.NET.Ref" IsImplicitlyDefined="true" Pack="false" PrivateAssets="All" />
+  </ItemGroup>
+  <PropertyGroup>
+    <WindowsSdkPackageVersion>10.0.19041.34</WindowsSdkPackageVersion>   
+  </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSdk" />
