--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -85,7 +85,7 @@
   </ItemGroup>
   <PropertyGroup>
     <WindowsSdkPackageVersion>10.0.19041.34</WindowsSdkPackageVersion>
-  </PropertyGroup> -->
+  </PropertyGroup>
   <ItemGroup Condition="'$(_MauiTargetPlatformIsWindows)' == 'True'">
     <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.19041.44" TargetingPackVersion="10.0.19041.44" />
   </ItemGroup>
