--- a/eng/pipelines/maui-release-internal.yml
+++ b/eng/pipelines/maui-release-internal.yml
@@ -199,7 +199,7 @@ extends:
               - name: TreatWarningsAsErrors
                 value: false
               - name: _OfficialBuildIdArgs
-                value: /p:OfficialBuildId=$(_BuildOfficalId)
+                value: /p:OfficialBuildId=$(_BuildOfficalId) /p:_SkipUpdateBuildNumber:true
             
             preSteps:
               - checkout: self
