--- a/eng/NuGetVersions.targets
+++ b/eng/NuGetVersions.targets
@@ -138,6 +138,11 @@
         NoWarn="NU1605"
     />
     <PackageReference
+        Update="Microsoft.Web.WebView2"
+        Version="$(MicrosoftWindowsWebView2PackageVersion)"
+        NoWarn="NU1605"
+    />
+    <PackageReference
         Update="Microsoft.Windows.SDK.BuildTools"
         Version="$(MicrosoftWindowsSDKBuildToolsPackageVersion)"
     />
@@ -253,10 +258,6 @@
     <PackageReference
         Update="Microsoft.Bcl.AsyncInterfaces"
         Version="$(MicrosoftBclAsyncInterfacesPackageVersion)"
-    />
-    <PackageReference
-        Update="Microsoft.Web.WebView2"
-        Version="$(_MicrosoftWebWebView2Version)"
     />
     <PackageReference
         Update="Microsoft.CodeAnalysis.PublicApiAnalyzers"
